data/derived/comb/progs/unify/prog5622.ml.out
Characters 159-160:
  let seen' = if (List.mem h seen) = true then seen else seen@h in
                                                              ^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
